<resources>
    <string name="app_name">我的家居</string>
    <string name="open_darwlayout">打开菜单</string>
    <string name="login_str">登录</string>
    <string name="close_darwlayout">关闭菜单</string>
    <string name="wifi_first">请先连上Wi-Fi网络</string>
    <string name="wifi_name">Wi-Fi名称</string>
    <string name="tip_exit">再按一次退出程序</string>
    <string name="please_connect_network">请连接网络！</string>
    <string name="title_about">关于</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="dialog_sure_to_delete">确定要删除设备吗？</string>
    <string name="dialog_sure_to_off">确定要关闭设备吗？</string>
    <string name="dialog_sure_psw_change">账号新密码即将生效，\n是否确认修改？</string>
    <string name="dialog_btn_back">返回</string>
    <string name="dialog_btn_logout">注销</string>
    <string name="dialog_btn_delete">删除</string>
    <string name="dialog_btn_cancel">取消</string>
    <string name="dialog_btn_confirm">确定</string>
    <string name="dialog_nonet_msg">手机还未连上Wi-Fi，请连接上您希望设备接入的Wi-Fi（如您家里的Wi-Fi），连接后请返回APP，将自动跳转到下一步</string>
    <string name="dialog_logout_msg">确定要注销，返回登陆界面吗？</string>
    <string name="dialog_disconnect">连接已断开</string>
    <string name="register_name_digits">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ</string>
    <string name="airlink_tips_start">请按下设备按键,灯闪即表示设备已进入配置模式,\n点击开始配置</string>
    <string name="airlink_btn_start">开始配置</string>
    <string name="airlink_please_wait">设备连接中，请耐心等待.</string>
    <string name="airlink_tips_error1">配置失败了，让我们看看哪里可能出了错：</string>
    <string name="airlink_tips_error2">1.设备是否正常运行？\n2.Wi-Fi网络是否连接顺畅？</string>
    <string name="airlink_tips_error3">请拔下设备电源，再重新接通电源，再点击重试</string>
    <string name="airlink_btn_retry">已经重新拔插电源了，我要重试</string>
    <string name="airlink_btn_softap">手动配置</string>
    <string name="title_alarm_list">报警信息</string>
    <string name="btn_call">联系客服</string>
    <string name="autoconfig_keep_wifi">请保持Wi-Fi连接</string>
    <string name="autoconfig_password">Wi-Fi密码</string>
    <string name="btn_next">下一步</string>
    <string name="binding_start_config_text1">请按下设备按键,灯闪即表示设备已进入配置模式,\n请在此界面等待几秒，界面将会自动跳转。</string>
    <string name="binding_start_config_text2">已按下按键，但是界面一直没跳转？</string>
    <string name="binding_config_failed_text1">配置失败了，让我们看看哪里可能出了错：</string>
    <string name="binding_config_failed_text2">1.设备是否正常运行？\n2.Wi-Fi网络是否连接顺畅？</string>
    <string name="binding_config_failed_text3">请拔下设备电源，再重新接通电源，再点击重试</string>
    <string name="binding_config_failed_text4">已经重新拔插电源了，我要重试</string>
    <string name="new_password">新密码</string>
    <string name="change_password">修改密码</string>
    <string name="old_password">旧密码</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="password">密码</string>
    <string name="setting_password">设置密码</string>
    <string name="curve_text1">室内温度曲线</string>
    <string name="device_list">设备列表</string>
    <string name="device_manage">设备管理</string>
    <string name="device_manage_text1">生产日期：XXXX.XX.XX</string>
    <string name="device_manage_text2">生产地点：XXXXX</string>
    <string name="device_manage_text3">设备型号：XXXXX</string>
    <string name="device_manage_text4">设备序列号：XXXXXXXXXXXXXXXX</string>
    <string name="device_name">设备名称</string>
    <string name="name">名称</string>
    <string name="delete_aircondition">删除设备</string>
    <string name="forget_password">忘记密码</string>
    <string name="forget_password_hint1">手机号/邮箱</string>
    <string name="forget_password_get_verifycode">获取验证码</string>
    <string name="forget_password_get_verifycode2">获取验\n证码</string>
    <string name="forget_password_get_verifycode3">秒后\n重新获取</string>
    <string name="forget_password_verifycode">验证码</string>
    <string name="forget_password_get_verifycode_again">重新获取\n验证码</string>
    <string name="help">帮助</string>
    <string name="help_for_device">设备使用帮助</string>
    <string name="help_for_app">APP使用帮助</string>
    <string name="login_name_hint">手机／邮箱</string>
    <string name="login_forget_password">忘记密码?</string>
    <string name="login">我要登录</string>
    <string name="register">免费注册！</string>
    <string name="main_control_title">家居控制台</string>
    <string name="main_control_timing_shutdown">定时关机</string>
    <string name="main_control_advanced_features">高级功能</string>
    <string name="main_control_temp_curve">温度曲线</string>
    <string name="main_control_celsius">摄氏</string>
    <string name="main_control_refrigeration">制冷</string>
    <string name="main_control_indoor_temp">室内温度</string>
    <string name="main_control_degree">°</string>
    <string name="main_control_set_temp">设定温度</string>
    <string name="main_control_low_wind">低风</string>
    <string name="main_control_regular_wind">中风</string>
    <string name="main_control_high_wind">高风</string>
    <string name="main_control_shake_wind">摆风</string>
    <string name="main_control_turn_on">开机</string>
    <string name="main_control_timing_turn_on">定时开机</string>
    <string name="register_email">邮箱</string>
    <string name="register_use_mobilephone">手机注册</string>
    <string name="register_use_email">邮箱注册</string>
    <string name="register_tips1">请输入您的真实邮箱，确保日后可找回密码。\n注册成功后会向您发送邮件</string>
    <string name="register_phone_num">手机号</string>
    <string name="search_device_already_configure">已配置的设备</string>
    <string name="search_device_tips1">你的网络中还没有已配置的设备,如已经配置过,\n请确认手机正连接着与设备相同的wifi.</string>
    <string name="search_device_configure_qr_code">二维码扫描添加虚拟设备</string>
    <string name="search_device_configure">我要配置连接</string>
    <string name="account_manage">账号管理</string>
    <string name="about">关于</string>
    <string name="back_to_device_list">返回设备列表</string>
    <string name="softap_text1">1.请复制以下密码:</string>
    <string name="softap_password">123456789</string>
    <string name="softap_text2">2.请进入设置>Wi-Fi，选择XPG-GAGENT-XXXX(XXXX为本模块mac的后四位),输入刚刚复制的密码;</string>
    <string name="softap_text3">3.完成后请返回此界面,将自动跳转到下一步.</string>
    <string name="softap_text4">Wi-Fi名称:home</string>
    <string name="softap_text5">Wi-Fi密码</string>
    <string name="softap_text6">连接网络</string>
    <string name="softap_text7">设备连接中，请耐心等待.</string>
    <string name="softap_text8">配置成功，记得切换回Wi-Fi网络哦！</string>
    <string name="softap_text9">切换好了</string>
    <string name="softap_text10">配置失败了,请拔下设备电源,再重新接通电源，再点击重试。</string>
    <string name="softap_text11">我已经重新拔插电源了，我要重试</string>
    <string name="user_manage">用户管理</string>
    <string name="user_name">用户名</string>
    <string name="logout">注销</string>
    <string name="change_success">修改成功</string>
    <string name="change_fail">修改失败</string>
    <string name="about_demo">版本信息</string>
    <string name="WIFI_MODE">wifi模块类型</string>
    <string name="appversion">当前版本：V1.1.0</string>
    <string name="SDKversion">当前sdk版本：</string>
    <string name="no_device">没有设备</string>
    <string name="device_online">在线设备</string>
    <string name="aircondition">空调</string>
    <string name="remote_online">在线设备</string>
    <string name="not_processing">暂不处理</string>
    <string name="call_customer_service">拨打客服</string>
    <string name="dialog_call_sure_to_logout">确定要注销，返回登陆界面吗？</string>
    <string name="call_customer_service_hot_line">拨打客服热线</string>
    <string name="qr_code_tips">将二维码放入框内，即刻自动扫描</string>
    <string name="reset_by_phone">通过手机重置密码</string>
    <string name="reset_by_email">通过邮箱重置密码</string>
    <string name="forget_password_get_captchacode">换一换</string>
     <string name="text_led_switch">客厅的灯</string>
     	<string name="path">/sdcard/test0.mp4</string>
	<string name="camera_user">用户名</string>
	<string name="version_code">版本号</string>
	<string name="soft_name">软件名</string>
	<string name="camera_pwd">密码</string>
	<string name="str_ok">确定</string>
	<string name="str_cancel">取消</string>
	<string name="exit_alert">确认退出吗 ?</string>
	<string name="showpwd">显示密码</string>
	<string name="connected">已连接</string>
	<string name="pwd_no_empty">密码不能为空</string>
	<string name="camera_port">端口</string>
	<string name="send_error">发送失败</string>
	<string name="recv_error">接收失败</string>
	<string name="unknow_error">未知错误</string>
	<string name="disclaimer_conent">深圳市欧杰特科技有限公司保留本软件的所有权，盗版必究。</string>
	<string name="version_conent">V 0.0.0.1</string>
	<string name="contact_me">"公司网站: http://www.object-camera.com客服邮箱:
		support@object-camera.com"
	</string>
	<string name="more_about_disclaimer">软件声明</string>
	<string name="more_about_version">版本信息</string>
	<string name="more_about_contact">联系我们</string>
	<string name="camera_not_online">相机断线,请回首页重连</string>
	<string name="app_running">正在运行</string>
	<string name="sensorlist_addnewdevice">添加新设备</string>
	<string name="sensor_list_sensor">传感器</string>
	<string name="sensorlist_havedevice">您已添加的设备</string>
	 <string name="add_sensor_infrerad_desc">红外是利用红外辐射的热效应,检测是否有人或者动物经过。</string>
    <string name="add_sensor_gas_desc">气感是通过气体传感器探测周围环境中可燃气体是否超过安全值。</string>
    <string name="add_sensor_smoke_desc">烟感是通过监测烟雾的浓度来实现火灾防范。</string>
    <string name="add_sensor_control_desc">无线遥控就是一种用来远程控制机器的装置。</string>
    <string name="add_sensor_siren_desc">警笛可以接收遥控器，无线门磁、无线红外等传感器的报警信号</string>
    <string name="add_sensor_door_desc">门磁是用来探测门、窗、抽屉等是否被非法打开或者移动。</string>
    <string name="start_codding_gas_desc">按下侧边的按钮，红色指示灯闪动即可</string>
    <string name="start_codding_smoke_desc">按下侧边的按钮，有声音提示完成对码</string>
    <string name="start_codding_infrerad_desc">手在红外前摆动一下</string>
    <string name="start_codding_siren_desc">接通警笛电源</string>
     <string name="sensor_type_door">门磁</string>
    <string name="sensor_type_infrared">红外</string>
    <string name="sensor_type_smoke">烟感</string>
    <string name="sensor_type_siren">警笛</string>
    <string name="sensor_type_gas">气感</string>
    <string name="sensor_type_remote">遥控器</string>
    <string name="sensor_type_camera">摄像头</string>
    <string name="sensor_type_curtain">幕帘</string>
	<string name="str_version">版本</string>
	<string name="pppp_status_initialing">已连接, 正在初始化</string>
	<string name="delete_camera">删除</string>
	<string name="list_option">操作</string>
	<string name="del_alert">确认删除?</string>
	<string name="str_search">局域网搜索</string>
	<string name="check_loction">查看录像</string>
	<string name="str_add">添加</string>
	<string name="str_about">关于</string>
	<string name="connecting">正在连接...</string>
	<string name="init_network_error">初始化网络失败</string>
	<string name="connect_failed">连接失败</string>
	<string name="edit">修改</string>
	<string name="setting">摄像机设置</string>
	<string name="string_about">关于我们</string>
	<string name="camera_type">摄像机类型</string>
	<string name="device_id_name">ID:</string>
	<string name="device_type_name">类型:</string>
	<string name="device_status_name">状态:</string>
	<string name="pppp_status_unknown">未知状态</string>
	<string name="pppp_status_connecting">正在连接</string>
	<string name="pppp_status_online">在线</string>
	<string name="pppp_status_disconnect">断线</string>
	<string name="pppp_status_connect_failed">连接失败</string>
	<string name="pppp_status_pwd_error">密码错误</string>
	<string name="pppp_status_invalid_id">ID号无效</string>
	<string name="pppp_dev_type_unknown">未知类型</string>
	<string name="device_not_on_line">摄像机不在线</string>
	<string name="pppp_mode">模式:</string>
	<string name="pppp_mode_p2p_normal">p2p连接</string>
	<string name="pppp_mode_p2p_relay">p2p转发</string>
	<string name="pppp_mode_unknown">未知</string>
	<string name="pppp_status_connect_timeout">连接超时</string>
	<string name="main_tap_here_add_vidicon">请按此处新增摄像机</string>
	<string name="back">返回</string>
	<string name="done">完成</string>
	<string name="main_select_all">全选</string>
	<string name="main_select_reverse">反选</string>
	<string name="main_edit">编辑</string>
	<string name="main_check">查看</string>
	<string name="main_vidicon">摄像机</string>
	<string name="main_alarm_event">报警事件</string>
	<string name="main_pic">图片</string>
	<string name="user_admin">管理员</string>
	<string name="user_setting">用户设置</string>
	<string name="delete_local_picture">删除该照片</string>
	<string name="localpic_no">沒有照片</string>
</resources>