<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    
    android:orientation="vertical">

    <RelativeLayout
        style="@style/TopLayout" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="8dp"
            android:text="@string/login_str"
            android:textColor="@android:color/white"
            android:textSize="22sp" />
    </RelativeLayout>

  
 <EditText
        android:id="@+id/etName"
      android:layout_height="48dp"
       android:layout_width="match_parent"
       android:layout_marginTop="15dp"
       android:textSize="17sp"
       android:background="@drawable/login_input_box"
        android:drawableLeft="@drawable/login_icon_name"
        android:hint="@string/login_name_hint" />
   <EditText
        android:id="@+id/etPsw"
        android:layout_height="48dp"
       android:layout_width="match_parent"
        android:textSize="17sp"
        android:inputType="textPassword"
        android:background="@drawable/login_input_box"
        android:drawableLeft="@drawable/login_icon_key"
        android:hint="@string/password" />
  

  

    <Button
        android:id="@+id/btnLogin"
       	style="@style/ButtonBlue"
       	android:layout_marginTop="20dp"
       	android:layout_width="match_parent"
       	android:layout_marginLeft="12dp"
       	android:layout_marginRight="12dp"
        android:text="@string/login"
       />
    <RelativeLayout android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        >
  <TextView
        android:id="@+id/tvForgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:text="@string/login_forget_password"
        android:textColor="@color/background_blue"
        android:textSize="16sp" />
   <TextView
        android:id="@+id/tvRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="12dp"
        android:text="@string/register"
        android:textColor="@color/background_blue"
        android:textSize="16sp" />
  
</RelativeLayout>
</LinearLayout>