<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/behind_layout"
    android:layout_width="match_parent"
    android:layout_gravity="left"
    android:layout_height="match_parent"
    android:background="@color/white" >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none" >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >
                <ImageView android:layout_width="match_parent"
                    android:layout_height="280dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/drawerbac"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/text_gray" />

                <RelativeLayout
                    android:id="@+id/rlAccount"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/background_light_gray"
                    android:gravity="center_vertical"
                    android:onClick="onClickSlipBar"
                    android:orientation="horizontal" >

                    <ImageView
                        android:id="@+id/icon2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:layout_margin="10dp"
                        android:src="@drawable/slib_account" />

                    <TextView
                        style="@style/MenuTextViewGray"
                        android:layout_toRightOf="@+id/icon2"
                        android:text="@string/account_manage" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_gravity="right|center_vertical"
                        android:layout_margin="10dp"
                        android:src="@drawable/arrow_right_gray" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/text_gray" />

                
              
                <RelativeLayout
                    android:id="@+id/rlAbout_Demo"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/background_light_gray"
                    android:gravity="center_vertical"
                    android:onClick="onClickSlipBar"
                    android:orientation="horizontal" >

                    <ImageView
                        android:id="@+id/icon4_Demo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:layout_margin="10dp"
                        android:src="@drawable/slib_about" />

                    <TextView
                        style="@style/MenuTextViewGray"
                        android:layout_toRightOf="@+id/icon4_Demo"
                        android:text="@string/about_demo" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_gravity="right|center_vertical"
                        android:layout_margin="10dp"
                        android:src="@drawable/arrow_right_gray" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/text_gray" />

                <Button
                    android:id="@+id/btnDeviceList"
                    style="@style/ButtonBlue"
                    android:layout_marginBottom="50dp"
                    android:layout_marginTop="120dp"
                    android:onClick="onClickSlipBar"
                    
                    android:text="@string/back_to_device_list" />
            </LinearLayout>
        </ScrollView>
   

    

</AbsoluteLayout>